--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
-certifi==2018.8.13
-click==6.7
-Flask==1.0.2
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-mkl-fft==1.0.4
-mkl-random==1.0.1
-numpy==1.15.0
-pandas==0.23.4
-python-dateutil==2.7.3
-pytz==2018.5
-six==1.11.0
-Werkzeug==0.14.1
+Babel==2.8.0
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+Flask-Babel==2.0.0
+Flask-Table==0.5.0
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+numpy==1.19.1
+pandas==1.1.0
+python-dateutil==2.8.1
+pytz==2020.1
+requests==2.24.0
+six==1.15.0
+urllib3==1.25.10
+Werkzeug==1.0.1
